--- a/school/after.html
+++ b/school/after.html
@@ -27,8 +27,8 @@
 			}
 			.pic{
 				height: 100%;
-				background-color: red;
-				background-image: url("https://ae01.alicdn.com/kf/U40a5109f3cff4e308361e88f7ce966bdq.jpg");
+				/*background-color: red;*/
+				/*background-image: url("https://ae01.alicdn.com/kf/U40a5109f3cff4e308361e88f7ce966bdq.jpg");*/
 				background-size: cover;
 			}
 			.topcard p{
