--- a/school/after.html
+++ b/school/after.html
@@ -142,12 +142,12 @@
 					clearInterval(timer)},1000);
 		</script>
 		<script>
-			var a = Math.floor((Math.random()*9)+1);
-			var x = Math.floor(a+10);
-			document.getElementById("random").innerHTML = x;
-			document.getElementById("random2").innerHTML = x + 13;
-			document.getElementById("random3").innerHTML = 4*x - a;
-			document.getElementById("randomsp").innerHTML = Math.floor(Math.random() * (3 + 1) + 17); 
+//			var a = Math.floor((Math.random()*9)+1);
+//			var x = Math.floor(a+10);
+//			document.getElementById("random").innerHTML = x;
+//			document.getElementById("random2").innerHTML = x + 13;
+//			document.getElementById("random3").innerHTML = 4*x - a;
+//			document.getElementById("randomsp").innerHTML = Math.floor(Math.random() * (3 + 1) + 17); 
 		</script>
 		<script>
             //change picture, which I think in this case useless
